feat(api): Checkout API (#41)
* feat(checkout): Checkout API

* fix(checkout): Validation Entity Fixes

* feat(checkout): Remove old checkouts

* all patches patched + sdk publish
