# apps/api/src/checkout/entities/checkout-line.entity.ts
@@ -1,25 +1,19 @@
 import { ApiProperty } from '@nestjs/swagger';
-import { Column, Entity, ManyToOne, PrimaryGeneratedColumn } from 'typeorm';
-import { ProductVariantDto } from '../../products/dto/product-variant.dto';
+import { IsInt } from 'class-validator';
+import { Column, Entity, ManyToOne } from 'typeorm';
 import { ProductVariantEntity } from '../../products/entities/product-variant.entity';
-import { CheckoutDto } from '../dto/checkout.dto';
 import { CheckoutEntity } from './checkout.entity';
 
 @Entity('checkout_checkout_lines')
 export class CheckoutLineEntity {
-	@PrimaryGeneratedColumn()
-	@ApiProperty({ type: Number, example: 1 })
-	id: number;
-
 	@Column({ type: Number })
 	@ApiProperty({ type: Number, example: 1 })
+	@IsInt()
 	quantity: number;
 
-	@ManyToOne(() => CheckoutEntity)
-	@ApiProperty({ type: CheckoutDto })
-	checkout: CheckoutDto;
+	@ManyToOne(() => CheckoutEntity, checkout => checkout.lines, { primary: true })
+	checkout: CheckoutEntity;
 
-	@ManyToOne(() => ProductVariantEntity)
-	@ApiProperty({ type: ProductVariantDto })
-	variant: ProductVariantDto;
+	@ManyToOne(() => ProductVariantEntity, { primary: true, eager: true })
+	variant: ProductVariantEntity;
 }
