# apps/api/src/checkout/entities/checkout.entity.ts
@@ -1,38 +1,49 @@
 import { ApiProperty } from '@nestjs/swagger';
 import { LanguageCode, Metadata } from '@nima-cms/utils';
-import { Column, CreateDateColumn, Entity, ManyToOne, PrimaryGeneratedColumn } from 'typeorm';
+import { IsEmail, IsInt, IsObject, IsOptional, IsString } from 'class-validator';
+import {
+	Column,
+	CreateDateColumn,
+	Entity,
+	ManyToOne,
+	OneToMany,
+	PrimaryGeneratedColumn,
+	UpdateDateColumn,
+} from 'typeorm';
 import { AddressDto } from '../../core/dto/address.dto';
 import { AddressEntity } from '../../core/entities/address.entity';
 import { UserDto } from '../../users/dto/user.dto';
 import { UserEntity } from '../../users/entities/user.entity';
+import { CheckoutLineEntity } from './checkout-line.entity';
 
 @Entity('checkout_checkout')
 export class CheckoutEntity {
-	@CreateDateColumn({ type: String })
+	@CreateDateColumn()
 	@ApiProperty({ type: String, example: '2022-01-01' })
 	created: string;
 
-	@CreateDateColumn({ type: String })
+	@UpdateDateColumn()
 	@ApiProperty({ type: String, example: '2022-01-01' })
 	lastChange: string;
 
 	@Column({ type: String, nullable: true })
 	@ApiProperty({ type: String, example: 'test@example.com', required: false })
+	@IsEmail()
 	email?: string;
 
 	@PrimaryGeneratedColumn('uuid')
 	@ApiProperty({ type: String, example: '' })
 	token: string;
 
-	@ManyToOne(() => UserEntity)
+	@ManyToOne(() => UserEntity, { nullable: true, eager: true })
 	@ApiProperty({ type: UserDto })
-	user: UserDto;
+	user?: UserEntity;
 
-	@ManyToOne(() => AddressEntity)
+	@ManyToOne(() => AddressEntity, { nullable: true, eager: true })
 	@ApiProperty({ type: AddressDto })
-	billingAddress: AddressDto;
+	billingAddress?: AddressEntity;
 
-	@Column({ type: 'float' })
+	@Column({ type: 'float', default: 0.0 })
 	@ApiProperty({ type: Number, example: 12.3 })
 	discountAmount: number;
 
@@ -40,20 +51,24 @@ export class CheckoutEntity {
 	@ApiProperty({ type: String, example: 'discount-name', required: false })
 	discountName?: string;
 
-	@Column({ type: String })
+	@Column({ type: String, default: '' })
 	@ApiProperty({ type: String, example: 'checkout-note' })
+	@IsString()
 	note: string;
 
-	@ManyToOne(() => AddressEntity)
+	@ManyToOne(() => AddressEntity, { nullable: true, eager: true })
 	@ApiProperty({ type: AddressDto })
-	shippingAddress: AddressDto;
+	shippingAddress?: AddressEntity;
 
-	@Column({ type: Number })
+	@Column({ type: Number, nullable: true })
 	@ApiProperty({ type: Number, example: 1 })
-	shipping_method_id;
+	@IsInt()
+	shipping_method_id?;
 
 	@Column({ type: String, nullable: true })
 	@ApiProperty({ type: String, example: 'ASDF123', required: false })
+	@IsString()
+	@IsOptional()
 	voucherCode?: string;
 
 	@Column({ type: String, nullable: true })
@@ -62,18 +77,24 @@ export class CheckoutEntity {
 
 	@Column({ type: 'jsonb', default: {} })
 	@ApiProperty({ type: Object, example: {} })
+	@IsObject()
+	@IsOptional()
 	metadata: Metadata;
 
 	@Column({ type: 'jsonb', default: {} })
 	@ApiProperty({ type: Object, example: {} })
+	@IsObject()
+	@IsOptional()
 	privateMetadata: Metadata;
 
-	@Column({ type: String })
+	@Column({ type: String, default: 'EUR' })
 	@ApiProperty({ type: String, example: 'EUR' })
+	@IsString()
 	currency: string;
 
-	@Column({ type: String })
+	@Column({ type: String, nullable: true })
 	@ApiProperty({ type: String, example: 'Greece' })
+	@IsString()
 	country: string;
 
 	@Column({ type: String, nullable: true })
@@ -86,5 +107,9 @@ export class CheckoutEntity {
 
 	@Column({ enum: LanguageCode, type: 'enum' })
 	@ApiProperty({ enum: LanguageCode, enumName: 'LanguageCode' })
+	@IsString()
 	languageCode: LanguageCode;
+
+	@OneToMany(() => CheckoutLineEntity, line => line.checkout, { eager: true })
+	lines: CheckoutLineEntity[];
 }
