# apps/api/src/core/dto/address.dto.ts
@@ -1,5 +1,8 @@
+import { OmitType } from '@nestjs/swagger';
 import { AddressEntity } from '../entities/address.entity';
 
 export class AddressDto extends AddressEntity {
+}
 
+export class CreateAddressDto extends OmitType(AddressDto, ['id']) {
 }
